--- a/index.html
+++ b/index.html
@@ -11,5 +11,24 @@
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
+    <p1> 1) Change right image filter to RED  by pressing "R" key</p1>
+  	<br>
+  	<br>
+  	<p2> 2) Change right image filter to BLUE  by pressing "B" key </p2>
+  	<br>
+  	<br>
+  	<p3> 3) Change right image filter to GREEN  by pressing "G" key </p3>
+  	<br>
+  	<br>
+  	<p4> 4) Change right image filter to Grey Scale  by pressing "Left Arrow" key </p4>
+  	<br>
+  	<br>
+  	<p5> 5) Change right image filter to Negative Scale  by pressing "Right Arrow" key </p5>
+  	<br>
+  	<br>
+  	<p6> 6) Change right image filter to Radial Blur  by pressing "UP" key </p6>
+  	<br>
+  	<br>
+  	<p7> 7) Reset to original by clicking left mouse button </p7>  	
   </body>
 </html>
